# midi-captain-max

./: .gitignore  .markdownlint.json  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  config-custom.json  requirements-circuitpython.txt  requirements-dev.txt
.claude/: context-issue-66.md
.github/: FUNDING.yml  copilot-instructions.md
.github/ISSUE_TEMPLATE/: oem-parity.md
.github/workflows/: ci.yml  emulator-test.yml  release.yml
config-editor/: package-lock.json  package.json
config-editor/src/: app.css  app.html
config-editor/src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
docs/: ANALYSIS-UPDATE.md  CODE_QUALITY_IMPROVEMENTS.md  FEATURE-ANALYSIS-REPORT.md  README-pr-integration.md  USER-GUIDE-EN.md  USER-GUIDE-PT-BR.md  config-form-editor-design.md  custom-drive-names.md  emulator-implementation-summary.md  emulator-setup.md  github-issues-to-create.md  github-secrets-setup.md  hardware-reference.md  long-press.md  macos-code-signing.md  midicaptain_reverse_engineering_handoff.txt  pc-messages.md  pr-50-merge-readiness-review.md  pr-conflict-diagram.txt  pr-conflict-quickref.md  pr-integration-example.py  pr-integration-step-by-step.md  pr-integration-summary-updated.md  pr-integration-summary.md  pr-review-50-51-53.md  pr-review-51-50.md  pr-three-way-conflict.txt  screen-cheatsheet.md  testing-custom-drive-names.md  usb-disable-bug-fix.md  windows-build.md
docs/HelmutKeller/: GLOBAL RACKSPACE Script for MIDI Captain V 1.0.0.gpscript
docs/PR_Examples/: example1.md
docs/features/: ARCHITECTURE.md  EDITOR-ARCHITECTURE.md  PRD.md  device-eject-implementation.md  device-layout-design.md  device-profiles-implementation.md  device-profiles-schemas.md  device-profiles.md
docs/plans/: 2026-01-23-custom-firmware-design.md  2026-02-02-config-editor.md  2026-02-09-config-form-editor-design.md  2026-02-09-config-form-editor-implementation.md  2026-02-10-device-reload-implementation.md  2026-03-13-multi-command-per-action.md  2026-03-16-device-auto-reload.md  2026-03-16-rust-migration-plan.md  2026-03-19-banks-pages-implementation.md
docs/reports/: 2026-01-30-executive-report.md  2026-03-20-project-state-investigation.md
docs/spikes/: 2026-02-17-webusb-investigation.md  2026-02-27-gui-firmware-installation-spike.md  2026-02-27-gui-firmware-installation-summary.md  2026-02-27-gui-firmware-installation-visual.md  README.md
emulator/: README.md  run.sh  setup.sh  test.sh
emulator/configs/: README.md  test-mini6.json  test-momentary.json  test-std10.json
firmware/circuitpython/: SPLASH_README.md  boot.py  code.py  config-example-mini6-keytimes.json  config-example-multi-command.json
firmware/dev/: INSTALL.md  INSTALL.txt  boot.py  code.py  config-example-channel.json  config-example-keytimes.json  config-example-pc.json  config-mini6.json  config-test-off-mode.json  config.json
firmware/original_helmut/: code_helmut_original.py
firmware/rust/: Cargo.toml  README.md
firmware/rust/.cargo/: config.toml
firmware/rust/src/: main.rs
tests/: __init__.py  conftest.py  test_bank_buttons.py  test_bank_manager.py  test_banks_config.py  test_button_state.py  test_colors.py  test_condition_evaluator.py  test_config.py  test_config_migration.py  test_config_migration_conditionals.py  test_long_press.py  test_long_press_runtime.py  test_multi_command.py  test_neopixel_mock.py  test_select_group_runtime.py  test_switch_mock.py  test_tap_mode_runtime.py  test_usb_drive_name.py
tools/: MIDICaptainInstaller.applescript  build-gumroad-zip.sh  build-installer.sh  deploy.ps1  deploy.sh  generate_splash.py  migrate_config.py  quick_fix.sh  read_serial.py  release_notes.md
(+103 files in other folders)
