[workspace]
members = [
    "config-editor/src-tauri",
]
# firmware/rust is excluded from workspace to avoid build failures in CI
# (requires thumbv6m-none-eabi target and embedded ARM toolchain)
# Build firmware separately: cd firmware/rust && cargo build --release --target thumbv6m-none-eabi
exclude = ["firmware/rust"]
resolver = "2"

# Shared dependencies and settings for workspace members
[workspace.package]
edition = "2021"
license = "Proprietary"
authors = ["Maximilian Cascone <max@mcmusicworkshop.com>"]

[workspace.dependencies]
# Shared config types between firmware and editor backend
serde = { version = "1", features = ["derive"] }
serde_json = "1"
