[package]
name = "midi-captain-firmware"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "midi-captain-firmware"
test = false
bench = false

[dependencies]
# Embassy async runtime for RP2040
embassy-executor = { version = "0.5", features = ["arch-cortex-m", "executor-thread", "integrated-timers"] }
embassy-time = { version = "0.3", features = ["defmt"] }
embassy-rp = { version = "0.1", features = ["defmt", "time-driver"] }
embassy-usb = { version = "0.1", features = ["defmt"] }

# Hardware support
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
rp2040-boot2 = "0.3"

# Shared config types with editor backend
# TODO: Re-enable when config loading is implemented (Phase 2)
# Will require splitting config types into a dedicated no_std-compatible crate
# config_editor_lib = { path = "../../config-editor/src-tauri" }
serde = { version = "1", default-features = false, features = ["derive"] }
serde-json-core = { version = "0.5", default-features = false }

# MIDI protocol
midi-types = { version = "0.2", default-features = false }

# Logging
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[build-dependencies]
